fixing scroll bar shift issue

--- a/src/main/webapp/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/bootstrap/css/bootstrap.css
@@ -142,6 +142,7 @@ audio:not([controls]) {
   display: none;
 }
 html {
+  overflow-y: scroll;
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
